Fix alignment of new logo

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -45,7 +45,7 @@ body {
 .piczag-logo {
   display: block;
   width: 82%;
-  margin: -31px auto -92px
+  margin: -31px auto 0;
 }
 .iphone {
   width: 200px;
@@ -205,6 +205,12 @@ body {
   }
 }
 
+
+@media (max-width: 855px) {
+  .piczag-logo {
+    margin: -30px auto -36px;
+  }
+}
 
 @media (max-width: 480px) {
   .content {
